--- a/index.css
+++ b/index.css
@@ -16,6 +16,63 @@ nav {
     margin-bottom: 1rem;
 }
 
+.label{
+    position: absolute;
+    left: 10px;
+    top: 14px;
+    transition: all 0.2s;
+    padding: 0 2px;
+    z-index: 1;
+    color: #b3b3b3;
+    user-select: none;
+}
+
+.text-input{
+    padding: 0.8rem;
+    width: 100%;
+    height: 100%;
+    border: 2px solid #2f2c45;
+    background-color: #277530;
+    border-radius: 5px;
+    font-size: 10px;
+    outline: none;
+    transition: all 0.3s;
+    color: #fff;
+}
+
+.label::before{
+    content: '';
+    height: 5px;
+    background: #277530;
+    position: absolute;
+    left: 0;
+    top: 10px;
+    width: 100%;
+    z-index: -1;
+}
+
+.text-input:focus{
+    border: 2px solid #38f2ff;
+    font-size: 18px;
+    text-shadow: 1.5px 1px 2px rgba(8, 8, 8, 0.493);
+}
+
+.text-input::placeholder{
+    font-size: 16px;
+    opacity: 0;
+    transition: all 0.3s;
+}
+
+.text-input:focus::placeholder{
+    opacity: 1;
+}
+
+.text-input:not(::placeholder-shown) + .label{
+    top: 10px;
+    color: #38f2ff;
+    font-size: 18;
+}
+
 .container{
     padding: 1rem;
 }
