--- a/index.css
+++ b/index.css
@@ -16,23 +16,22 @@ nav {
     margin-bottom: 1rem;
 }
 
-.label{
+/* .label{
     position: absolute;
     left: 10px;
     top: 14px;
     transition: all 0.2s;
-    padding: 0 2px;
     z-index: 1;
     color: #b3b3b3;
     user-select: none;
-}
+} */
 
-.text-input{
-    padding: 0.8rem;
-    width: 100%;
-    height: 100%;
+/* .text-input{
+    padding: 3px;
+    width: 200px;
+    height: 2rem;
     border: 2px solid #2f2c45;
-    background-color: #277530;
+    background-color: #000;
     border-radius: 5px;
     font-size: 10px;
     outline: none;
@@ -40,7 +39,7 @@ nav {
     color: #fff;
 }
 
-.label::before{
+/* .label::before{
     content: '';
     height: 5px;
     background: #277530;
@@ -49,9 +48,9 @@ nav {
     top: 10px;
     width: 100%;
     z-index: -1;
-}
+} */
 
-.text-input:focus{
+/*.text-input:focus{
     border: 2px solid #38f2ff;
     font-size: 18px;
     text-shadow: 1.5px 1px 2px rgba(8, 8, 8, 0.493);
@@ -60,7 +59,7 @@ nav {
 .text-input::placeholder{
     font-size: 16px;
     opacity: 0;
-    transition: all 0.3s;
+    transition: all 0.1s;
 }
 
 .text-input:focus::placeholder{
@@ -71,22 +70,22 @@ nav {
     top: 10px;
     color: #38f2ff;
     font-size: 18;
-}
+} */
 
 .container{
     padding: 1rem;
 }
 
-/* #itemForm label {
+#itemForm label {
     display: block;
     margin-bottom: 1rem;
 }
 
 #itemForm input {
-    height: 2rem;
-    text-align: center;
+    height: 1.5rem;
+    text-align: left;
     border: 1px solid #bfbfbf;
-} */
+}
 
 #quantityInput, #priceInput{
     width: 3rem;
